# ModularAuthSystem

./: .env.example  .gitignore  .replit  Dockerfile  Dockerfile.auth  README.md  app.py  docker-compose.yml  keycloak_config_example.json  main.py  models.py  pyproject.toml  requirements.txt  run_app.py  test_db.py
auth_service/: config.py  keycloak_auth.py  main.py  middleware.py
auth_service/routers/: auth.py
templates/: admin_dashboard.html  base.html  index.html  login.html  profile.html  student_dashboard.html  teacher_dashboard.html  user_form.html  users.html
user_service/: config.py  db.py  main.py  middleware.py  models.py
user_service/routers/: users.py
